# Simple-Redis

./: CMakeLists.txt  README.md  main.cpp
entry/: client.cpp
entry/include/: client.h
persistence/: aof.cpp
persistence/include/: aof.h
policy/: evict_ploicy.cpp
policy/include/: evict_ploicy.h
trie/: trie.cpp  trie_store.cpp
trie/include/: trie.h  trie_store.h
type/: hash_type.cpp  wrapper.cpp
type/include/: hash_type.h  wrapper.h
